--- a/skillup1.css
+++ b/skillup1.css
@@ -80,8 +80,137 @@ h2:before {
   background-color: #ec715f;
 }
 
-.portfolio-text {
+.text {
   margin: 30px;
   font-size: 16px;
   color: #000000;
+}
+
+.portfolio-item {
+  padding-bottom: 90px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-image {
+  width: 300px;
+  height: 250px;
+}
+
+.portfolio-item > :nth-child(2) {
+  padding: 0px 10px 10px 10px;
+}
+
+.portfolio-item > :nth-child(5) {
+  padding: 0px 10px 0px 10px;
+}
+
+.feature-box {
+  margin: 0 auto;
+  padding-top: 90px;
+  width: 980px;
+  text-align: center;
+}
+
+.feature-minibox {
+  margin-bottom: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feature-minibox > :nth-child(2) {
+  padding: 0px 10px 0px 10px;
+}
+
+.feature-item {
+  width: 320px;
+}
+
+.feature-item i {
+  font-size: 60px;
+}
+
+.feature-text {
+  font-size: 20px;
+  padding: 10px 0px 10px 0px;
+  color: #000000;
+}
+
+.profile-bigbox {
+  background-color: #eceff1;
+}
+
+.profile-box {
+  margin: 0 auto;
+  padding-top: 90px;
+  width: 1024px;
+  text-align: center;
+}
+
+.profile-minibox {
+  padding-bottom: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-item {
+  width: 512px;
+}
+
+.profile-image {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+.profile-maintext {
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.profile-item-text {
+  padding-bottom: 20px;
+}
+
+.contact-box {
+  margin: 0 auto;
+  padding-top: 90px;
+  width: 800px;
+  text-align: center;
+}
+
+.contact-minibox {
+  padding-bottom: 90px;
+  display: flex;
+  justify-content: center;
+  text-align: start;
+}
+
+.contact-item {
+  width: 400px;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-item-text {
+  font-size: 20px;
+  margin: 0px;
+  padding-bottom: 5px;
+}
+
+.contact-item-minitext {
+  font-size: 16px;
+  margin: 0px;
+  padding-bottom: 20px;
+}
+
+.contact-item-icon {
+  margin: 0px;
+  font-size: 50px;
+}
+
+.contact-item-icon > :nth-child(2) {
+  padding: 0px 20px 0px 20px;
 }
