--- a/skillup1.css
+++ b/skillup1.css
@@ -1,5 +1,5 @@
 header {
-  width: cover;
+  width: 100%;
   height: 70px;
   background-color: #ec715f;
 }
@@ -27,6 +27,14 @@ header {
   height: 70px;
 }
 
+#humberger {
+  display: none;
+}
+
+main {
+  width: 100%;
+}
+
 .main-visual {
   width: 100%;
   height: 650px;
@@ -47,7 +55,8 @@ header {
 }
 
 .main-subtext {
-  margin: 10px;
+  margin: 0px;
+  padding-top: 10px;
   font-size: 20px;
   color: #fafafa;
 }
@@ -133,11 +142,20 @@ h2:before {
 
 .feature-text {
   font-size: 20px;
+  margin: 0px;
   padding: 10px 0px 10px 0px;
   color: #000000;
 }
 
+.feature-minitext {
+  margin: 0px;
+  padding-bottom: 10px;
+  font-size: 16px;
+  color: #000000;
+}
+
 .profile-bigbox {
+  width: 100%;
   background-color: #eceff1;
 }
 
@@ -167,11 +185,17 @@ h2:before {
 
 .profile-maintext {
   font-size: 20px;
+  margin: 0px;
   padding-bottom: 5px;
 }
 
 .profile-item-text {
+  margin: 0px;
   padding-bottom: 20px;
+}
+
+.contact-bigbox {
+  width: 100%;
 }
 
 .contact-box {
@@ -185,7 +209,6 @@ h2:before {
   padding-bottom: 90px;
   display: flex;
   justify-content: center;
-  text-align: start;
 }
 
 .contact-item {
@@ -213,4 +236,152 @@ h2:before {
 
 .contact-item-icon > :nth-child(2) {
   padding: 0px 20px 0px 20px;
+}
+
+footer {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ec715f;
+}
+
+.footer-text {
+  font-size: 16px;
+  color: #fafafa;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 50px;
+  }
+  .nav-list {
+    width: 90%;
+  }
+  .nav-list > :nth-child(2) {
+    display: none;
+  }
+  .nav-list > :nth-child(3) {
+    display: none;
+  }
+  .nav-list > :nth-child(4) {
+    display: none;
+  }
+  .nav-list > :nth-child(5) {
+    display: none;
+  }
+  .nav-item {
+    margin: 0px;
+  }
+  .nav-item-img {
+    height: 50px;
+  }
+
+  #humberger {
+    position: relative;
+    height: 36px;
+    width: 36px;
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 2px solid #444;
+    border-radius: 4px;
+  }
+  #humberger div {
+    position: absolute;
+    left: 4px;
+    height: 4px;
+    width: 24px;
+    background-color: #444;
+    border-radius: 2px;
+    display: inline-block;
+    box-sizing: border-box;
+  }
+  #humberger div:nth-of-type(1) {
+    top: 4px;
+  }
+  #humberger div:nth-of-type(2) {
+    top: 14px;
+  }
+  #humberger div:nth-of-type(3) {
+    bottom: 4px;
+  }
+
+  main {
+    display: flex;
+    justify-content: center;
+  }
+  .main-visual {
+    width: 90%;
+    height: 650px;
+    background-image: url(img/code.png);
+    background-size: cover;
+    background-position: 100% 100%;
+  }
+  .main-text {
+    margin: 0px;
+    font-size: 40px;
+    color: #fafafa;
+  }
+  .main-subtext {
+    font-size: 18px;
+  }
+  .portfolio-bigbox {
+    width: 100%;
+  }
+  .portfolio-box {
+    width: 90%;
+  }
+  .portfolio-item {
+    padding-bottom: 90px;
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio-item > :nth-child(odd) {
+    display: none;
+  }
+  .feature-bigbox {
+    width: 100%;
+  }
+  .feature-box {
+    width: 90%;
+  }
+  .feature-minibox {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .feature-item {
+    width: 100%;
+  }
+  .profile-box {
+    margin: 0 auto;
+    padding-top: 90px;
+    width: 90%;
+    text-align: center;
+  }
+  .profile-minibox {
+    padding-bottom: 90px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .profile-maintext {
+    margin: 0px;
+    padding: 20px 0px 5px 0px;
+  }
+  .contact-box {
+    width: 90%;
+  }
+  .contact-minibox {
+    padding-bottom: 90px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+  .contact-item {
+    width: 100%;
+  }
 }
